backend/ad-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ad-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ad-service
  template:
    metadata:
      labels:
        app: ad-service
    spec:
      containers:
      - name: ad-service
        image: 404456670711.dkr.ecr.us-east-1.amazonaws.com/ad-service:latest  
        ports:
        - containerPort: 3002
