backend/ad-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ad-service
spec:
  selector:
    app: ad-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002  
  type: LoadBalancer
